testcrates/compiletest/tests/ui/compile-fail/section-in-closure.stderr
error: section cannot be described at here
 --> $DIR/section-in-closure.rs:6:9
  |
6 |         section!(cx, "section", {});
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
